~ WIP use AccessController when creating MonitoredItems